# Yazz

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  README.txt  Yazz_ControllerMapping.ysn  Yazz_FactoryBank.ysn  Yazz_Markers.ysn  bitbucket-pipelines.yml  manual.md  plot.txt  readme.txt  todo.txt
doc/: manual.md
src/: 2  canvas.rs  complex_sine_osc.rs  ctrl_map.rs  delay.rs  engine.rs  envelope.rs  filter.rs  lfo.rs  main.rs  midi_handler.rs  modulation.rs  multi_oscillator.rs  oscillator.rs  param_selection.rs  parameter.rs  ringbuffer.rs  sample_generator.rs  sine_oscillator.rs  sound.rs  square_oscillator.rs  storage.rs  synth.rs  termion_wrapper.rs  todo.txt  triangle_oscillator.rs  tui.rs  value_range.rs  voice.rs
src/synth/: delay.rs  engine.rs  envelope.rs  filter.rs  lfo.rs  mod.rs  multi_oscillator.rs  onepole.rs  oscillator.rs  sine_oscillator.rs  square_oscillator.rs  synth.rs  triangle_oscillator.rs  voice.rs  wavetable.rs  wt_manager.rs  wt_oscillator.rs  wt_reader.rs
src/synth/filter/: filter.rs  korg35.rs  mod.rs  moog_improved.rs  ober_moog.rs  oberheim.rs  onepole.rs  reson_z.rs  rlpf.rs  sem.rs  va_onepole.rs
src/tui/: bar.rs  button.rs  canvas.rs  child_widget.rs  color.rs  color_scheme.rs  container.rs  controller.rs  dial.rs  display.rs  item_selection.rs  label.rs  main.rs  marker_manager.rs  midi_learn.rs  mod.rs  mouse.rs  observer.rs  printer.rs  select.rs  slider.rs  statemachine.rs  stdio_printer.rs  surface.rs  termion_wrapper.rs  tui.rs  value.rs  value_display.rs  waveforms.rs  widget.rs
