[package]
name = "synth"
version = "0.1.0"
authors = ["ICS"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "*"
failure = "0.1.5"
lazy_static = "1.3"
num-traits = "0.2.6"
num = "*"
termion = "1"
midir = "0.5.0"
crossbeam-channel = "0.3"
rand = "*"
term_cursor = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
flexi_logger = "0.14"

[[bin]]
name = "synth"
path = "src/main.rs"
