[package]
name = "yazz"
version = "0.1.0"
authors = ["ICS"]
edition = "2018"

[dependencies]
clap = "2"
cpal = "*"
crossbeam-channel = "0.3"
failure = "0.1.5"
flexi_logger = "0.14"
lazy_static = "1.3"
log = "0.4"
midir = "0.5.0"
num = "*"
num-traits = "0.2.6"
rand = "*"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
term_cursor = "0.2.1"
termion = "1"
wavetable = "0.1.2"

[[bin]]
name = "yazz"
path = "src/main.rs"
